--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "mainframe-city-dark-ui",
+  "name": "gruvbox-dark-ui",
   "theme": "ui",
   "version": "0.1.0",
-  "description": "Just messing around with Atom UI styling",
+  "description": "Atom UI theme to go with gruvbox syntax theme",
   "keywords": [
     "ui",
     "theme"
   ],
-  "repository": "https://github.com/phantummm/mainframe-city-dark-ui",
+  "repository": "https://github.com/phantummm/gruvbox-dark-ui",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
